add reference to arXiv preprint, rename images folder

--- a/contribute.html
+++ b/contribute.html
@@ -40,7 +40,7 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="img/github.svg" width="36" style="filter: invert(100%);"></a></li>
+				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="images/github.svg" width="36" style="filter: invert(100%);"></a></li>
 			</ul>
 		</div>
 	</nav>
