--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="img/github.svg" width="36" style="filter: invert(100%);"></a></li>
+				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="images/github.svg" width="36" style="filter: invert(100%);"></a></li>
 			</ul>
 		</div>
 	</nav>
@@ -53,7 +53,8 @@
 
 		<p class="lead">
 			GuiTeNet is a graphical user interface for (quantum) tensor networks.<br />
-			Start by drag-and-dropping the blue circle below.
+			Start by drag-and-dropping the blue circle below.<br />
+			(Reference: <a href="https://arxiv.org/abs/1808.00532">arXiv:1808.00532</a>)
 		</p>
 
 		<svg id="guitenetSvg" width="600" height="400"></svg>
