--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="img/github.svg" width="36" style="filter: invert(100%);"></a></li>
+				<li><a href="https://github.com/GuiTeNet/guitenet"><img src="images/github.svg" width="36" style="filter: invert(100%);"></a></li>
 			</ul>
 		</div>
 	</nav>
@@ -49,7 +49,12 @@
 		<h1>About GuiTeNet</h1>
 
 		<p class="lead">
-			The GuiTeNet software and this webpage have been written by <a href="http://christian.mendl.net">Christian Mendl</a>.
+			The GuiTeNet software and this webpage have been written by <a href="http://christian.mendl.net">Christian Mendl</a>.<br /><br />
+
+			Reference:<br />
+			Lisa Sahlmann, Christian B. Mendl<br />
+			<strong>GuiTeNet: A graphical user interface for tensor networks</strong><br />
+			(<a href="https://arxiv.org/abs/1808.00532">arXiv:1808.00532</a>)
 		</p>
 	</main>
 </body>
