--- a/tutorial.html
+++ b/tutorial.html
@@ -48,9 +48,150 @@
 	<main role="main" class="container">
 		<h1>Tutorial</h1>
 
-		<p class="lead">
-			Coming soon...
+		<p class="lead text-justify" style="max-width: 65%;">
+			What are tensors and tensor networks to begin with? A <em>tensor</em> is a generalization
+			of a matrix, i.e., a multidimensional array. The <em>rank</em> of a tensor is the number of indices
+			required to label a component. Thus matrices have rank 2 (row and column index), and
+			vectors have rank 1 (single index for addressing a component). In GuiTeNet, tensors are
+			abstractly represented as shown in the figure. Each orange leg represents one
+			dimension; thus, the rank of the tensor in the figure is 4. The zero inside the black
+			disk serves as unique identification number for the tensor.
 		</p>
+		<figure class="figure text-center" style="max-width: 65%;">
+			<img src="images/tensor.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">
+				A single tensor with 4 legs (dimensions); the ordering of dimensions is indicated by the red labels
+			</figcaption>
+		</figure>
+		<p class="lead text-justify" style="max-width: 65%;">
+			A <em>tensor network</em> encompasses a collection of tensors together with certain
+			operations on them, like contractions (which generalize matrix-matrix multiplications)
+			or splitting of a tensor via so-called SVD or QR-decompositions. Tensor networks (like
+			for example matrix product states) are an essential framework for the analysis and
+			simulation of <em>strongly correlated quantum systems</em>; see for example
+			the <a href="https://arxiv.org/abs/1306.2164">introduction by Orus (2013)</a> or
+			the <a href="https://arxiv.org/abs/0907.2796">paper by Verstraete, Murg, Cirac (2008)</a>
+			for a more in-depth introduction, or
+			the <a href="https://arxiv.org/abs/1008.3477">review by Schollwöck (2011)</a>.
+		</p>
+		<p class="lead text-justify" style="max-width: 65%;">
+			GuiTeNet facilitates the graphical construction of tensor networks and associated operations,
+			and simultaneously generates source code for these operations.
+		</p>
+
+
+		<h2>Create a new tensor</h2>
+
+		<p class="lead text-justify" style="max-width: 65%;">
+			Add a new tensor to the network by drag-and-dropping the blue circle.
+			Initially, the new tensor has no legs yet. The blue "create tensor" symbol
+			reappears at its default location afterwards.
+		</p>
+		<figure class="figure" style="max-width: 65%;">
+			<img src="images/create_tensor_a.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/create_tensor_b.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/create_tensor_c.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">Creating a new tensor by a drag-and-drop gesture</figcaption>
+		</figure>
+
+
+		<h2>Attach tensor legs</h2>
+
+		<p class="lead text-justify" style="max-width: 65%;">
+			Attach a new leg to a tensor by "pulling" it out of the tensor, i.e.,
+			drag-and-dropping the tensor and simultaneously holding the <kbd>Shift</kbd> key.
+			Each tensor and its legs can still be freely moved around within the GUI window.
+		</p>
+		<figure class="figure" style="max-width: 65%;">
+			<img src="images/create_leg_a.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/create_leg_b.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">Attaching a tensor leg</figcaption>
+		</figure>
+
+
+		<h2>Contract tensors</h2>
+
+		<p class="lead text-justify" style="max-width: 65%;">
+			Tensor contractions merge tensors together by summing over shared indices, generalizing
+			matrix-matrix multiplications. Recall that a "conventional" matrix-matrix
+			multiplication \(C = A B\) is defined as \(c_{ik} = \sum_j a_{ij} b_{jk}\):
+			the second "leg" (dimension) of \(A\) and the first "leg" (dimension) of \(B\)
+			are contracted (summed over). The following figure shows a matrix-matrix
+			multiplication as it appears in GuiTeNet; the matrices \(A\), \(B\) and \(C\)
+			are the tensors labeled 0, 1 and 2, respectively. The tips of to-be-contracted
+			(connected) legs change color from green to red.
+		</p>
+		<figure class="figure" style="max-width: 65%;">
+			<img src="images/matrix_mult_before.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/matrix_mult_after.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">Conventional matrix-matrix multiplication</figcaption>
+		</figure>
+		<p class="lead text-justify" style="max-width: 65%;">
+			A general contraction allows several indices (legs) to be contracted simultaneously.
+			Specify a contraction by connecting the tips of tensor legs, and click the
+			"Contract" button to perform the contraction. The output tensor inherits the
+			free legs (with green tips) from the input tensors; the ordering of these legs
+			(red labels) follows the identification numbers of the input tensors, that is,
+			first the free legs of the tensor with the smallest ID, then the free legs of
+			the tensor with the second smallest ID etc.
+		</p>
+		<figure class="figure" style="max-width: 65%;">
+			<img src="images/contraction_before.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/contraction_after.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">Example of a general tensor network contraction</figcaption>
+		</figure>
+		<p class="lead text-justify" style="max-width: 65%;">
+			Besides visualizing tensor network operations, GuiTeNet also generates corresponding source code
+			(currently Python/NumPy, with additional programming languages planned for the future).
+			Contractions are conveniently translated into NumPy's
+			<a href="https://docs.scipy.org/doc/numpy/reference/generated/numpy.einsum.html">einsum</a> function.
+			For the above example, it reads
+		</p>
+		<p>
+			<pre>T4 = np.einsum(T0, (0, 1, 2), T1, (0, 1, 3), T2, (0, 4), T3, (4, 5), (2, 3, 5))</pre>
+		</p>
+		<p class="lead text-justify" style="max-width: 65%;">
+			The manuscript (<a href="https://arxiv.org/abs/1808.00532">arXiv:1808.00532</a>) explains the logic
+			of the code in more detail.
+		</p>
+
+
+		<h2>Split a tensor</h2>
+
+		<p class="lead text-justify" style="max-width: 65%;">
+			Splitting a tensor by a so-called QR or singular value decomposition (SVD) is
+			a ubiquitous operation in tensor network algorithms. The first step is the
+			"matricization" of the tensor: a subset of legs is grouped together into one
+			"fat" leg and the remaining (complementary) legs into a second "fat" leg.
+			The two fat legs are interpreted as the rows and columns of a matrix, which is
+			then decomposed.
+		</p>
+		<p class="lead text-justify" style="max-width: 65%;">
+			The figure below illustrates this process (as it appears in GuiTeNet)
+			for the QR decomposition of a tensor with initially 5 legs.
+			First right-click on a tensor to initiate the splitting operation. An overlay
+			window then asks for the ordering and partitioning of dimensions attributed to
+			the rows and columns in the matricization process. In the example, the "row"
+			consists of dimensions 0, 3, 2 (in this order) and the "column" of dimensions
+			1, 4 (in this order). After the decomposition, the resulting Q and R matrices are
+			finally reshaped to restore the original dimensions, with an additional dimension
+			for the shared bond (last dimension of Q, first dimension of R). Thus the dimensions
+			0, 1, 2 of Q match the original dimensions 0, 3, 2, and dimensions 1, 2 of R the
+			original dimensions 1, 4.
+		</p>
+		<figure class="figure" style="max-width: 65%;">
+			<img src="images/qr_splitting_input.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/qr_splitting_params.svg" class="figure-img img-fluid"> <span style="font-size: 2em;">&raquo;</span>
+			<img src="images/qr_splitting_result.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption text-center">QR splitting of a tensor, arranging the dimensions attributed to the Q and R tensors in the overlay window</figcaption>
+		</figure>
 	</main>
+
+	<p class="lead text-right">
+		<a href="#" class="btn btn-outline-primary" role="button">&Uarr;</a>
+	</p>
+
+	<!--  MathJax -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 </body>
 </html>
