fix links to "raw" scripts

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 	<!-- GuiTeNet CSS -->
-	<link href="https://rawgit.com/GuiTeNet/guitenet/master/styles/guitenet.css" rel="stylesheet" type="text/css">
+	<link href="https://github.com/GuiTeNet/guitenet/blob/master/styles/guitenet.css?raw=true" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -68,9 +68,9 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 
 	<!-- GuiTeNet scripts -->
-	<script src="https://rawgit.com/GuiTeNet/guitenet/master/scripts/operations.js"></script>
-	<script src="https://rawgit.com/GuiTeNet/guitenet/master/scripts/backend.js"></script>
-	<script src="https://rawgit.com/GuiTeNet/guitenet/master/scripts/utils.js"></script>
-	<script src="https://rawgit.com/GuiTeNet/guitenet/master/scripts/main.js"></script>
+	<script src="https://github.com/GuiTeNet/guitenet/blob/master/scripts/operations.js?raw=true"></script>
+	<script src="https://github.com/GuiTeNet/guitenet/blob/master/scripts/backend.js?raw=true"></script>
+	<script src="https://github.com/GuiTeNet/guitenet/blob/master/scripts/utils.js?raw=true"></script>
+	<script src="https://github.com/GuiTeNet/guitenet/blob/master/scripts/main.js?raw=true"></script>
 </body>
 </html>
